welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:10: error: not found: value couleurs
    setCouleurBrosse(couleurs(i))
                     ^